--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@fastify/swagger-ui": "^3.0.0",
         "fastify": "^4.18.0",
         "fastify-raw-body": "^4.3.0",
+        "sqlite3": "^5.1.7",
         "typescript": "^5.4.5"
     },
     "devDependencies": {
